--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,3 @@
-# For more information on configuration, see:
-#   * Official English Documentation: http://nginx.org/en/docs/
-#   * Official Russian Documentation: http://nginx.org/ru/docs/
-
 user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log;
@@ -25,14 +21,14 @@ stream {
 
         upstream dn-gnome-14711{
             least_conn;
-            server 10.0.9.46:14711;
+            server 10.0.3.224:14711;
             #server 10.0.15.180:14711;
             #server 192.168.100.3;
             #server 192.168.100.4;
         }
         upstream dn-gnome-24001{
             least_conn;
-            server 10.0.9.46:24001;
+            server 10.0.3.224:24001;
             #server 10.0.15.180:24001;
             #server 10.0.3.233:24001;
             #server 10.0.7.141:24001;
@@ -41,7 +37,7 @@ stream {
         }
         upstream dn-gnome-25001{
             least_conn;
-            server 10.0.9.46:25001;
+            server 10.0.3.224:25001;
             #server 10.0.15.180:25001;
             #server 192.168.100.3;
             #server 192.168.100.4;
@@ -92,11 +88,10 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
-
         # Upsteam server gnome
         upstream dn-gnome-81{
             least_conn;
-            server 10.0.9.46:81;
+            server 10.0.3.224:81;
             #server 10.0.15.180:81;
             #server 10.0.3.233:81;
             #server 10.0.7.141:81;
@@ -114,17 +109,18 @@ http {
             #server 192.168.100.4;
         }
 
+    limit_req_zone $binary_remote_addr zone=one:10m rate=1000r/m;
     server {
         listen       81;
         listen       [::]:81;
-        server_name  gnome-hub.com www.gnome-hub.com;
+        server_name  gnome-hub.com www.gnome-hub.com obt.gnome-hub.com;
 
         root         /usr/share/nginx/html;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
-	            #ssl_certificate /etc/letsencrypt/live/gnome-hub.com/fullchain.pem; # managed by Certbot
+            #ssl_certificate /etc/letsencrypt/live/gnome-hub.com/fullchain.pem; # managed by Certbot
             #ssl_certificate_key /etc/letsencrypt/live/gnome-hub.com/privkey.pem; # managed by Certbot
             #include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
             #ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
@@ -134,21 +130,24 @@ http {
               proxy_set_header Host $host:$server_port;
               proxy_set_header X-Forwarded-Ssl on;
               proxy_redirect off;
+              limit_except GET HEAD POST { deny all; }
+              limit_req zone=one burst=10 nodelay;
+              deny 31.220.3.140;
              # proxy_set_header  X-Forwarded-Proto  https;
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               proxy_pass http://dn-gnome-81;
-            }
-		
-	    location /dev10release3/ {
-	      proxy_set_header X-Real-IP $remote_addr;
+              }
+
+            location /dev10release3/ {
+              proxy_set_header X-Real-IP $remote_addr;
               proxy_set_header Host $host:$server_port;
               proxy_set_header X-Forwarded-Ssl on;
               proxy_redirect off;
              # proxy_set_header  X-Forwarded-Proto  https;
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               #rewrite ^/update(/.*)$ $1 break;
-	      proxy_pass http://dn-updater;
-	    }
+              proxy_pass http://dn-updater;
+            }
         error_page 404 /404.html;
         location = /404.html {
         }
@@ -157,33 +156,3 @@ http {
         location = /50x.html {
         }
     }
-
-# Settings for a TLS enabled server.
-#
-#    server {
-#        listen       443 ssl http2;
-#        listen       [::]:443 ssl http2;
-#        server_name  _;
-#        root         /usr/share/nginx/html;
-#
-#        ssl_certificate "/etc/pki/nginx/server.crt";
-#        ssl_certificate_key "/etc/pki/nginx/private/server.key";
-#        ssl_session_cache shared:SSL:1m;
-#        ssl_session_timeout  10m;
-#        ssl_ciphers PROFILE=SYSTEM;
-#        ssl_prefer_server_ciphers on;
-#
-#        # Load configuration files for the default server block.
-#        include /etc/nginx/default.d/*.conf;
-#
-#        error_page 404 /404.html;
-#            location = /40x.html {
-#        }
-#
-#        error_page 500 502 503 504 /50x.html;
-#            location = /50x.html {
-#        }
-#    }
-
-}
-
