--- a/gnome-bot/package.json
+++ b/gnome-bot/package.json
@@ -1,9 +1,9 @@
 {
+  "type": "module",
   "dependencies": {
-    "axios": "^1.2.1",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "form-data": "^4.0.0"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
