--- a/gnome-bot/package.json
+++ b/gnome-bot/package.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "google-spreadsheet": "^3.3.0",
+    "node-cron": "^3.0.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
