--- a/gnome-bot/package.json
+++ b/gnome-bot/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.3",
     "google-spreadsheet": "^3.3.0",
     "node-cron": "^3.0.2",
+    "openai": "^3.1.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
