--- a/gnome-bot/package.json
+++ b/gnome-bot/package.json
@@ -6,13 +6,16 @@
     "google-spreadsheet": "^3.3.0",
     "node-cron": "^3.0.2",
     "openai": "^3.1.0",
-    "request": "^2.88.2"
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "export NODE_ENV=production&& node index.js",
+    "dev": "export NODE_ENV=development&& nodemon index.js"
   }
 }
