--- a/Pipfile
+++ b/Pipfile
@@ -4,35 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-beautifulsoup4 = "==4.12.0"
-certifi = "==2022.12.7"
-charset-normalizer = "==3.1.0"
-deep-translator = "==1.10.1"
-distlib = "==0.3.6"
-filelock = "==3.10.2"
-idna = "==3.4"
-morfessor = "==2.0.6"
-mouseinfo = "==0.1.3"
-mpmath = "==1.3.0"
-pipenv = "==2023.3.20"
-platformdirs = "==3.1.1"
-polib = "==1.1.1"
-pyautogui = "==0.9.53"
-pygetwindow = "==0.0.9"
-pymsgbox = "==1.0.9"
-pyperclip = "==1.8.2"
-pyrect = "==0.2.0"
-pyscreeze = "==0.1.28"
-pytweening = "==1.0.4"
-pytz = "==2022.7.1"
-requests = "==2.28.2"
-sentencepiece = "==0.1.96"
-soupsieve = "==2.4"
-urllib3 = "==1.26.15"
-virtualenv = "==20.21.0"
-virtualenv-clone = "==0.5.7"
+deep-translator = "*"
+pyautogui = "*"
+xmltodict = "*"
+opencv-python-headless = "*"
 pillow = "*"
-numba = "*"
 
 [dev-packages]
 
